--- a/ivy.xml
+++ b/ivy.xml
@@ -10,13 +10,14 @@
 	</configurations>
 
 	<dependencies>
-		<dependency org="br.com.caelum" name="vraptor" rev="3.4.1" conf="default" />
+		<dependency org="br.com.caelum" name="vraptor" rev="3.5.3" conf="default" />
 		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
 		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="default" />
 		<dependency org="org.hsqldb" name="hsqldb" rev="2.2.8" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-entitymanager" rev="4.0.1.Final" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-c3p0" rev="4.0.1.Final" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-validator" rev="4.2.0.Final" conf="default" />
+		<dependency org="br.com.caelum.vraptor" name="vraptor-plugin-hibernate4" rev="1.0.3" conf="default"/>
 		<dependency org="joda-time" name="joda-time" rev="2.0" conf="default" />
 		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.4.1" conf="default" />
 
