--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="lib" path="lib/test/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/test/hamcrest-all-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/mockito-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/test/dbunit-2.4.8.jar"/>
+	<classpathentry kind="lib" path="lib/test/jintegrity-0.1.2.jar"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
