--- a/ivy.xml
+++ b/ivy.xml
@@ -14,12 +14,13 @@
 		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
 		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="default" />
 		<dependency org="org.hsqldb" name="hsqldb" rev="2.2.8" conf="default" />
-		<dependency org="org.hibernate" name="hibernate-entitymanager" rev="4.0.1.Final" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-c3p0" rev="4.0.1.Final" conf="default" />
-		<dependency org="org.hibernate" name="hibernate-validator" rev="4.2.0.Final" conf="default" />
+		<!-- <dependency org="org.hibernate" name="hibernate-entitymanager" rev="4.0.1.Final" conf="default" />
+		<dependency org="org.hibernate" name="hibernate-validator" rev="4.2.0.Final" conf="default" /> -->
 		<dependency org="br.com.caelum.vraptor" name="vraptor-plugin-hibernate4" rev="1.0.3" conf="default"/>
 		<dependency org="joda-time" name="joda-time" rev="2.0" conf="default" />
 		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.4.1" conf="default" />
+		<dependency org="org.hamcrest" name="hamcrest-all" rev="1.3" conf="default"/>
 
 		<!-- Provided dependencies -->
 		<dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="provided->default" />
@@ -29,6 +30,7 @@
 		<dependency org="junit" name="junit" rev="4.10" conf="test->default" />
 		<dependency org="org.hamcrest" name="hamcrest-all" rev="1.1" conf="test->default" />
 		<dependency org="org.mockito" name="mockito-all" rev="1.9.0" conf="test->default" />
+		<dependency org="com.jintegrity" name="jintegrity" rev="0.1.2" conf="test->default" />
 
 		<!-- Jetty dependencies -->
 		<dependency org="org.mortbay.jetty" name="jsp-api-2.1" rev="6.1.14" conf="jetty->default" />
