finalizacao do projeto

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,8 @@
 hibernate.connection.driver_class=org.hsqldb.jdbcDriver
 hibernate.connection.url=jdbc:hsqldb:file:tmp/devdb
+hibernate.connection.username=SA
+hibernate.connection.password=
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.hbm2ddl.auto=update
 hibernate.query.substitutions=true=1, false=0
 hibernate.show_sql=true
