--- a/.classpath
+++ b/.classpath
@@ -12,10 +12,9 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/test/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="lib/test/junit-4.10.jar" sourcepath="C:/Users/Gabriel/.m2/repository/junit/junit/4.10/junit-4.10-sources.jar"/>
 	<classpathentry kind="lib" path="lib/test/hamcrest-all-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/mockito-all-1.9.0.jar"/>
-	<classpathentry kind="lib" path="lib/test/dbunit-2.4.8.jar"/>
-	<classpathentry kind="lib" path="lib/test/jintegrity-0.1.2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jintegrity"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
