--- a/ivy.xml
+++ b/ivy.xml
@@ -21,6 +21,7 @@
 		<dependency org="joda-time" name="joda-time" rev="2.0" conf="default" />
 		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.4.1" conf="default" />
 		<dependency org="org.hamcrest" name="hamcrest-all" rev="1.3" conf="default"/>
+		<dependency org="mysql" name="mysql-connector-java" rev="5.1.27" conf="default"/>
 
 		<!-- Provided dependencies -->
 		<dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="provided->default" />
@@ -30,8 +31,9 @@
 		<dependency org="junit" name="junit" rev="4.10" conf="test->default" />
 		<dependency org="org.hamcrest" name="hamcrest-all" rev="1.1" conf="test->default" />
 		<dependency org="org.mockito" name="mockito-all" rev="1.9.0" conf="test->default" />
+		<!-- Esperado gerar versao com hibernate 4
 		<dependency org="com.jintegrity" name="jintegrity" rev="0.1.2" conf="test->default" />
-
+		-->
 		<!-- Jetty dependencies -->
 		<dependency org="org.mortbay.jetty" name="jsp-api-2.1" rev="6.1.14" conf="jetty->default" />
 		<dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.14" conf="jetty->default" />
