--- a/src/test/resources/hibernate.properties
+++ b/src/test/resources/hibernate.properties
@@ -4,7 +4,7 @@ hibernate.connection.username=SA
 hibernate.connection.password=
 #CREATE USER SA PASSWORD DIGEST 'd41d8cd98f00b204e9800998ecf8427e'
 
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create-drop
 hibernate.query.substitutions=true=1, false=0
 hibernate.show_sql=true
 hibernate.format_sql=true
