correcao de properties

--- a/src/test/resources/hibernate.properties
+++ b/src/test/resources/hibernate.properties
@@ -8,9 +8,10 @@ hibernate.hbm2ddl.auto=create-drop
 hibernate.query.substitutions=true=1, false=0
 hibernate.show_sql=true
 hibernate.format_sql=true
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 #DATASOURCE POOL CONFIGURATIONS
-hibernate.connection.provider_class=org.hibernate.connection.C3P0ConnectionProvider
+hibernate.connection.provider_class=org.hibernate.service.jdbc.connections.internal.C3P0ConnectionProvider
 maxPoolSize=20
 minPoolSize=3
 initialPoolSize=3
