--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,15 +1,18 @@
 hibernate.connection.driver_class=org.hsqldb.jdbcDriver
 hibernate.connection.url=jdbc:hsqldb:file:tmp/devdb
+#hibernate.connection.driver_class=com.mysql.jdbc.Driver
+#hibernate.connection.url=jdbc:mysql://localhost/voto
 hibernate.connection.username=SA
 hibernate.connection.password=
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.hbm2ddl.auto=update
 hibernate.query.substitutions=true=1, false=0
 hibernate.show_sql=true
 hibernate.format_sql=true
 
 #DATASOURCE POOL CONFIGURATIONS
-hibernate.connection.provider_class=org.hibernate.connection.C3P0ConnectionProvider
+hibernate.connection.provider_class=org.hibernate.service.jdbc.connections.internal.C3P0ConnectionProvider
 maxPoolSize=20
 minPoolSize=3
 initialPoolSize=3
