add jars no build.xml devido versao do jintegrity
A versão que está no repositório do maven não contempla o hibernate 4, e
esse jar foi gerado com a correção, portanto, apenas por enquanto os jar
serão carregados de forma separada para rodar os testes de integração

--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,10 @@
 	</path>
 	<path id="test.path.id">
 		<fileset dir="lib/test" />
+		<fileset dir="">
+			<include name="dbunit-2.4.8.jar" />
+			<include name="jintegrity.jar" />
+		</fileset>
 		<path refid="lib.path.id" />
 		<pathelement location="${test.build.dir}" />
 		<pathelement location="${build.dir}" />
