--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,7 @@
 	<classpathentry kind="lib" path="lib/test/junit-4.10.jar" sourcepath="C:/Users/Gabriel/.m2/repository/junit/junit/4.10/junit-4.10-sources.jar"/>
 	<classpathentry kind="lib" path="lib/test/hamcrest-all-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/mockito-all-1.9.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jintegrity"/>
+	<classpathentry kind="lib" path="dbunit-2.4.8.jar"/>
+	<classpathentry kind="lib" path="jintegrity.jar"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
