--- a/build.xml
+++ b/build.xml
@@ -85,7 +85,10 @@
           target: war
          ================================= -->
 	<target name="war" description="--> generate war file" depends="test">
-		<war destfile="${output.dir}/${project.name}.war">
+		<!--<war destfile="${output.dir}/${project.name}.war">
+			<zipfileset dir="${webapp.dir}" />
+		</war>-->
+		<war destfile="${output.dir}/ROOT.war">
 			<zipfileset dir="${webapp.dir}" />
 		</war>
 	</target>
